[VERSION 4.8.7]

* FIXED: `regex->for_all' for regexes that can match the empty string to avoid
  loops.

* ADDED: `text_buffer <-clone' hooks to realise proper cloning of the alien
  data associated with text_buffer objects.

* MODIFIED: library predicate pce_server/1 now exits the server when receiving
  the `exit' command.  xpce-client will terminates immediately on reaching
  end-of-file in the input.  With the -b flag it will wait for the socket
  to be closed by xpce.

* FIXED: class(window) save-style for <-current_event and <-focus_event set
  to `nil' to avoid saving event objects.

* FIXED: `fragment ->string' for subclasses of class fragment that redefine
  the ->emptied method to destroy emptied fragments.

* MODIFIED: `directory <-{file,directory}' only uses the path of the receiver
  if the name of the argument is not absolute now.

* ADDED: `fragment ->include' to determine whether or not the start/end
  is included in the range.  Determines expansion if the insertion takes
  place exactly on the border.

* FIXED: `regex <-match' while operating in a fragment object.

* MODIFIED: Added `move_end' argument to `fragment ->start'.

* MODIFIED: The fragment-list of class text-buffer now ensures that, if
  two fragments start at the same position, the larger one is first in
  the list to improve the notion of `nested' fragments (order used to
  be undefined).

* FIXES: Integrated Quintus' modifications to 4.8.0.  Mostly portability
  issues.  `frame ->expose' now guarantees the window is mapped before it
  is exposed.

* CONFIGURE: added support for runtime version generation:
  configure --enable-runtime.

* ADDED: `style ->left_margin' and `style ->right_margin'.  Raised the maximum
  number of arguments to C-defined methods from 10 to 16 for style->initialise.

* FIXED: `editor ->selected_fragment_style' when defining the colour of the
  characters.

* FIXED: class -><undefined method> lead to a delegation loop.  Bug introduced