@@ -7,6 +7,7 @@
     Copyright (C) 1992 University of Amsterdam. All rights reserved.
 */
 
+#define INLINE_UTILITIES 1
 #include <h/kernel.h>
 
 
@@ -21,6 +22,7 @@ createSendMethod(Name name, Vector types, StringObj doc, SendFunc action)
 }
 
 
+#if 0
 status
 sendSendMethod(SendMethod m, Any receiver, int argc, const Any argv[])
 { status rval;
@@ -41,6 +43,115 @@ sendSendMethod(SendMethod m, Any receiver, int argc, const Any argv[])
   popGoal();
 
   return rval ? SUCCEED : FAIL;
+}
+#endif
+
+
+status
+sendSendMethod(SendMethod m, Any receiver, int argc, const Any argv[])
+{ status rval;
+  AnswerMark mark;
+  goal goal;
+  Goal g = &goal;
+  int _xmode = ExecuteMode;
+
+  pushGoal(g, m, receiver, m->name, argc, argv);
+  traceEnter(g);
+
+  markAnswerStack(mark);
+  ExecuteMode = MODE_SYSTEM;
+
+  if ( m->types->size == ZERO )		/* no argument method */
+  { ExecuteCalls++;
+  
+    if ( argc > 0 )
+    { if ( offDFlag(m, D_TYPENOWARN) )
+	errorPce(m, NAME_argumentCount, ZERO);
+      rval = FAIL;
+    } else
+    { if ( m->function )
+      { SendFunc f = (SendFunc) m->function;
+
+#if O_CPLUSPLUS
+        if ( isCppFunctionPointer(f) )
+	{ void *cppf = valCppFunctionPointer(f);
+
+	  withReceiver(receiver, m->context,
+		       rval = callCPlusPlusPceMethodProc(rec, cppf, 0, NULL));
+	} else
+#endif O_CPLUSPLUS
+        { rval = (*f)(receiver);
+	}
+      } else				/* code implementation */
+      { if ( isNil(m->message) )
+	{ errorPce(m, NAME_noImplementation);
+	  fail;
+	}
+	
+	withReceiver(receiver, m->context,
+		     withArgs(0, (Any *)NULL, rval = executeCode(m->message)));
+      }
+    }
+  } else if ( m->types->size == ONE &&
+	      ((Type *)m->types->elements)[0]->vector == OFF )
+  { Type t = m->types->elements[0];	/* type */
+    Any arg;				/* the argument */
+
+    ExecuteCalls++;
+
+    if ( argc == 0 )
+      arg = DEFAULT;
+    else if ( argc == 1 )
+      arg = argv[0];
+    else
+    { if ( offDFlag(m, D_TYPENOWARN) )
+	errorPce(m, NAME_argumentCount, ONE);
+      rval = FAIL;
+      goto out;
+    }
+
+    if ( !(arg = CheckType(arg, t, receiver)) )
+    { if ( offDFlag(m, D_TYPENOWARN) &&
+	  CheckTypeError != CTE_OBTAINER_FAILED )
+	errorTypeMismatch(receiver, m, 1, t);
+      rval = FAIL;
+      goto out;
+    }
+
+    if ( m->function )
+    { SendFunc f = (SendFunc) m->function;
+
+#if O_CPLUSPLUS
+      if ( isCppFunctionPointer(f) )
+      { void *cppf = valCppFunctionPointer(f);
+
+	withReceiver(receiver, m->context,
+		     rval = callCPlusPlusPceMethodProc(rec, cppf, 1, &arg));
+      } else
+#endif O_CPLUSPLUS
+      { rval = (*f)(receiver, arg);
+      }
+    } else				/* code implementation */
+    { if ( isNil(m->message) )
+      { errorPce(m, NAME_noImplementation);
+	rval = FAIL;
+      } else
+      { withReceiver(receiver, m->context,
+		     rval = forwardCodev(m->message, 1, &arg));
+      }
+    }
+  } else
+  { rval = (invokeMethod((Method) m, NAME_send, receiver, argc, argv) ?
+	      						SUCCEED : FAIL);
+  }
+
+out:
+  rewindAnswerStack(mark, NIL);
+  ExecuteMode = _xmode;
+  traceReturn(g, rval);
+  popGoal();
+
+  return rval;
 }
 
 
